--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html ng-app>
 	<head>
+		<title>omlet.js</title>
+		<meta name="description" content="Elegantly unscramble this message with jQuery using the space provided. Then write the scrambler that made it. The answer is an object with global scope that can scramble and unscramble any text any number of times.">
 		<link rel="stylesheet" href="base.css">
 		<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.3/angular.min.js"></script>
@@ -12,27 +14,37 @@
 		<div class="demo" ng-controller="LiveChange">
 			<div class="encode">
 				<textarea ng-change="updateScramble()" ng-model="scramble_text" placeholder="Update Text"></textarea>
-				<input type="number" ng-change="updateScramble()" ng-model="set_min" placeholder="Set Min">
-				<input type="number" ng-change="updateScramble()" ng-model="set_max" placeholder="Set Max">
+				<input type="number" ng-change="updateScramble()" ng-model="set_min" placeholder="Set Range Min">
+				<input type="number" ng-change="updateScramble()" ng-model="set_max" placeholder="Set Range Max">
 				<input type="number" ng-change="updateScramble()" ng-model="set_cadence" placeholder="Set Cadence">
 				<input type="text" ng-change="updateScramble()" ng-model="set_characters" placeholder="Set Characters">
 			</div>
 			<div class="decode">
 				<button ng-click="unscramble()">Decode Simply</button>
+				<br /><br />
+				<input type="number" ng-change="updateScramble()" ng-model="set_speed" placeholder="Set Superfluous Speed">
+				<button ng-click="unscrambleX()">Decode Superfluously</button>
 			</div>
 		</div><!-- end demo -->
 		
 		<script src="omlet.js"></script>
 		<script>
-			//NON-SCRAMBLE RELATED STUFF
+			//demo-related JS and scramble invocation
 			var selector = '.omlet';
 			var LiveChange = function($scope){
-		        $scope.updateScramble = function(){ omlet.scramble($scope.scramble_text,selector,$scope.set_min,$scope.set_max,$scope.set_cadence,$scope.set_characters); }
-		       	$scope.unscramble = function(){ omlet.unscramble(selector); }
+		        $scope.updateScramble = function(){ 
+		        	omlet.scramble($scope.scramble_text,selector,$scope.set_min,$scope.set_max,$scope.set_cadence,$scope.set_characters); 
+		        }
+		       	$scope.unscramble = function(){ 
+		       		omlet.unscramble.simple(selector); 
+		       	}
+		       	$scope.unscrambleX = function(){ 
+		       		omlet.unscramble.superfluous(selector,$scope.set_speed,$scope.set_cadence); 
+		       	}
 		    };
 		    
 		    $(function() { 
-				omlet.scramble("Elegantly unscramble this message with jQuery using the space provided. Then write the scrambler that made it. The answer is an object with global scope that can scramble and unscramble any text any number of times.",selector); 
+				omlet.scramble(null,selector); 
 			});
 		</script>
 	</body>
