it wasnt really a reset button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<input type="number" ng-change="updateScramble()" ng-model="set_cadence" placeholder="Set Cadence">
 			<input type="text" ng-change="updateScramble()" ng-model="set_characters" placeholder="Set Characters">
 			<button ng-click="unscramble()">Decode Simply</button>
-			<button ng-click="updateScramble()">Reset</button>
+			<button ng-click="updateScramble()">Rescramble</button>
 			<br /><br />
 			
 			<input id="as" type="checkbox" ng-change="updateScramble()" ng-model="yx"><label for="as">Animate XY Simultaneously</label>
